--- a/SWP_Ticket_ReSell_API/appsettings.json
+++ b/SWP_Ticket_ReSell_API/appsettings.json
@@ -11,6 +11,6 @@
   },
 
   "ConnectionStrings": {
-    "MyDB": "Server=DESKTOP-L9PUH3P;Uid=sa;Pwd=123456;Database=swp;TrustServerCertificate=True"
+    "MyDB": "Server=xVanAn;Uid=sa;Pwd=123;Database=swp;TrustServerCertificate=True"
   }
 }
