--- a/SWP_Ticket_ReSell_API/appsettings.json
+++ b/SWP_Ticket_ReSell_API/appsettings.json
@@ -11,6 +11,7 @@
   },
 
   "ConnectionStrings": {
-    "MyDB": "Server=xVanAn;Uid=sa;Pwd=123;Database=swp;TrustServerCertificate=True"
+    "MyDB": "Server=xVanAn;Uid=sa;Pwd=123;Database=swp;TrustServerCertificate=True;Connect Timeout=30;MultipleActiveResultSets=True;"
+
   }
 }
