--- a/SWP_Ticket_ReSell_API/SWP_Ticket_ReSell_API.csproj
+++ b/SWP_Ticket_ReSell_API/SWP_Ticket_ReSell_API.csproj
@@ -7,13 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-		  <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.4" />
 		  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.0" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
